# Tunde-Agent

./: .cursorrules  .dockerignore  .env.example  .gitignore  README.md  alembic.ini  docker-compose.yml  pyproject.toml  requirements.txt  setup_keys.py  tunde_dev.db
alembic/: env.py
alembic/versions/: 001_rls_initial_schema.py  002_approval_requests_telegram_gate.py  003_oauth_providers_users.py
docker/: Dockerfile
docs/: MASTER_INDEX.md  PROJECT_CONTEXT.md  PROJECT_MAP.md  Tunde_Agent_Reference_Document.md  architecture.md  business_agent_spec.md  captcha_handling_policy.md  current_implementation.md  data_retrieval_protocol.md  features.md  human_approval_gate.md  infrastructure.md  media_standards.md  multi_agent.md  persona_and_character.md  research_language_and_search_locales.md  roadmap.md  security_and_legal_compliance.md  self_improvement_rules.md  ux_framework.md
telegram_agent_core/: __init__.py
tests/: conftest.py  test_database_url.py  test_db_rls_smoke.py  test_designer_chart_selection.py  test_gemini_image_reference_prepare.py  test_health.py  test_json_util.py  test_mission_report_url.py  test_model_router.py  test_payload_vision_summary.py  test_post_task_markup.py  test_reporter.py  test_search_api_rotation.py  test_serp_captcha_hints.py  test_serp_parsing.py  test_telegram_photo_util.py  test_tunde_identity_prompt.py  test_ux_menu_callbacks.py  test_veo_operation_parse.py
tunde_webapp_backend/: README.md  __init__.py  tunde_dev.db
tunde_webapp_frontend/: index.html  package-lock.json  package.json  tailwind.config.js
(+266 files in other folders)
