[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tunde-agent"
version = "0.1.0"
description = "Tunde Agent — personal AI agent (FastAPI, Playwright, PostgreSQL)"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "alembic>=1.14.0",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "sqlalchemy>=2.0.0",
    "psycopg2-binary>=2.9.9",
    "pymysql>=1.1.0",
    "playwright>=1.49.0",
    "playwright-stealth>=2.0.0",
    "beautifulsoup4>=4.12.0",
    "pydantic-settings>=2.6.0",
    "python-dotenv>=1.0.0",
    "httpx>=0.27.0",
    "pillow>=10.4.0",
    "fpdf2>=2.8.0",
    "python-docx>=1.1.0",
    "pandas>=2.2.0",
    "openpyxl>=3.1.0",
    "pdfplumber>=0.11.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
]

[tool.setuptools.packages.find]
where = ["src", "telegram_agent_core", "."]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-m \"not integration\""
markers = [
    "integration: requires PostgreSQL with migrations applied",
]
